# veridion-company-data-api-task

./: .pre-commit-config.yaml  README.md  SCRAPING_EVAL.md  WORKLOG.md  api-showcase.json  docker-compose.dev.yml  docker-compose.yml  dump-volume.sh  fix-permissions.sh
crawler/: .cursorrules  .dockerignore  .flake8  .gitignore  .isort.cfg  .pylintrc  Dockerfile  Dockerfile.crawler  Dockerfile.dashboard  Makefile  README.md  SETUP.md  filter_alive_domains.sh  gunicorn.conf.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_crawler_cron.sh  scrapy.cfg  setup.py
crawler/configs/: API-input-sample.csv  companies-domains-all.csv  companies-domains.csv
crawler/features/: extract_company_data.feature  hello_world.feature  load_domains.feature
crawler/features/steps/: extract_company_data_steps.py  hello_world_steps.py  load_domains_steps.py
crawler/src/: company_data_extractor.py  crawler.py  hello_world.py  middlewares.py  pipelines.py  run_crawler.py  settings.py
crawler/src/cli/: run_crawler.py  run_es_import.py
crawler/src/company_data/: company_data_extractor.py  domain_loader.py  items.py  models.py  statistics.py
crawler/src/dashboard/: README.md  api.py  app.py
crawler/src/dashboard/templates/: api_showcase.html  base.html  dashboard.html  run_details.html
crawler/src/searchdb/: __init__.py  data_models.py  elasticsearch_importer.py
crawler/src/spiders/: company_spider.py
crawler/test_files/: companies_test100.json  invalid_domains.csv
crawler/tests/acceptance/features/: elasticsearch_import.feature  evaluation.feature  extract_company_data.feature
crawler/tests/unit/: test_api.py  test_company_data_extractor.py  test_domain_loader.py  test_elasticsearch_importer.py  test_hello_world.py  test_searchdb_data_models.py
(+4 files in other folders)
