[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Web crawler component for extracting company data points from websites"
authors = ["Mihail Feraru <mihailferaru2000@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "2.13.1"
behave = "1.2.6"
requests = "2.32.3"
lxml = "5.4.0"
cssselect = "1.3.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.2.0"
mypy = "1.16.0"
pre-commit = "4.2.0"
pytest = "8.4.0"
coverage = "7.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = "src"
known_third_party = "scrapy,behave,requests,lxml"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
disallow_untyped_defs = true
